@@ -1,3 +1,13 @@
+2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* matchbox/core/mb-wm-types.h
+	* matchbox/core/mb-wm-atoms.c:
+	  Moved _MAEMO_SUPPRESS_ROOT_RECONFIGURATION so we can use to to...
+	* matchbox/core/mb-window-manager.c:
+	  ...fake a root window reconfig when we see the toggle offed.
+	  Do it so that it works both with dummy (current) and with working
+	  (experimental) fbdev_drv.so.
+
 2009-07-02  Thomas Thurman  <thomas.thurman@collabora.co.uk>
 
 	* matchbox/core/mb-wm-client-base.c: Add check that a window is
